# adfox-account-campaigns

./: pyproject.toml  result
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 038np47nv1j0l8kbmvfxq44q8nf0kxvr-source  hqgp14lgbpi50x2d4hx8bnw96r7gvy98-source
adfox-account-campaigns/: __init__.py  __main__.py
